[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "action-ledger"
version = "0.1.0"
description = "Tamper-evident audit logging for AI agent actions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "AI Action Ledger", email = "hello@actionledger.io"}
]
keywords = ["ai", "agents", "logging", "audit", "langchain", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
dev = ["pytest", "pytest-cov", "black", "mypy"]

[project.urls]
Homepage = "https://github.com/Jreamr/ai-action-ledger"
Documentation = "https://github.com/Jreamr/ai-action-ledger#readme"
Repository = "https://github.com/Jreamr/ai-action-ledger"
Issues = "https://github.com/Jreamr/ai-action-ledger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["action_ledger*"]
